--- a/service.html
+++ b/service.html
@@ -71,6 +71,7 @@
             <li><p> Future Generation Computer Systems  </p></li>
             <li><p> Journal of Visual Communication and Image Representation </p></li>
             <li><p> Machine Vision and Applications </p></li>
+            <li><p> Machine Learning Research </p></li>
             <li><p> Multimedia Tools and Applications </p></li>
             <li><p> Neural Processing Letters </p></li>
         </ul>
