--- a/publications.html
+++ b/publications.html
@@ -90,13 +90,6 @@
 	    </p></li>
 	
 	    <li><p>
-            <b>Unsupervised Tissue Segmentation via Deep Constrained Gaussian Network. </b> [<a href="https://doi.org/10.1109/TMI.2022.3195123" class=link>Link</a>]
-            <br> 
-            Yang Nan, Peng Tang, Guyue Zhang, Caihong Zeng, Zhihong Liu, <b>Zhifan Gao</b>, Heye Zhang, Guang Yang. <br>
-            <i>IEEE Transactions on Medical Imaging</i>
-	    </p></li>
-	
-	    <li><p>
 	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
             <br> 
             Jiahao Huang, Yingying Fang, Yinzhe Wu, Huanjun Wu, <b>Zhifan Gao</b>, Yang Li, Javier Del Ser, Jun Xia, Guang Yang. <br>
@@ -108,6 +101,13 @@
     <div>
         <h2><hr><a name="2022"></a>2022</h2>
         <ul>
+            <li><p>
+            <b>Unsupervised Tissue Segmentation via Deep Constrained Gaussian Network. </b> [<a href="https://doi.org/10.1109/TMI.2022.3195123" class=link>Link</a>]
+            <br> 
+            Yang Nan, Peng Tang, Guyue Zhang, Caihong Zeng, Zhihong Liu, <b>Zhifan Gao</b>, Heye Zhang, Guang Yang. <br>
+            <i>IEEE Transactions on Medical Imaging</i> 41(12): 3799-3811, 2022
+	    </p></li>
+		
             <li><p>
             <b>Annealing Genetic GAN for Imbalanced Web Data Learning. </b> [<a href="https://doi.org/10.1109/TMM.2021.3120642" class=link>Link</a>] 
             <br> 
