--- a/service.html
+++ b/service.html
@@ -50,10 +50,12 @@
             <li><p> IEEE Transactions on Cognitive and Developmental Systems </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
+            <li><p> IEEE Transactions on Geoscience and Remote Sensing </p></li>
             <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
             <li><p> IEEE Journal of Biomedical and Health Informatics  </p></li>
             <li><p> IEEE Internet of Things Journal </p></li>
             <li><p> IEEE Network Magzine <p></li>
+            <li><p> IEEE Sensors Journal <p></li>
             <li><p> IEEE Signal Processing Letters <p></li>
             <li><p> ACM Transactions on Multimedia Computing, Communications and Applications </p></li>
             <li><p> ACM Transactions on Intelligent Systems and Technology </p></li>
