--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,13 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
 	    <li><p>	
+	    <b>Personalized Coronary Blood Flow Model Based on CT Perfusion to Non-Invasively Calculate Fractional Flow Reserve. </b> [<a href="https://doi.org/10.1016/j.cma.2022.115789" class=link>Link</a>]
+            <br>
+            Xiaofei Xue, Xiujian Liu, Zhifan Gao, Rui Wang, Lei Xu, Dhanjoo Ghista, Heye Zhang. <br>
+            <i>Computer Methods in Applied Mechanics and Engineering</i>
+	    </p></li>
+		
+	    <li><p>	
 	    <b>Multi-Level Multi-Type Self-Generated Knowledge Fusion for Cardiac Ultrasound Segmentation. </b> [<a href="https://doi.org/10.1016/j.inffus.2022.11.004" class=link>Link</a>]
             <br>
             Chenjin Yu, Shuang Li, Dhanjoo Ghista, <b>Zhifan Gao</b>, Heye Zhang, Javier Del Ser, Lin Xu. <br>
