--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,20 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
 	    <li><p>	
+	    <b>Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </b> [<a href="https://doi.org/10.1109/TCSVT.2022.3232112" class=link>Link</a>]
+            <br>
+            <b>Zhifan Gao</b>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. <br>
+            <i>IEEE Transactions on Circuits and Systems for Video Technology</i>
+	    </p></li>
+		
+	    <li><p>	
+	    <b>Scale Mutualized Perception for Vessel Border Detection in Intravascular Ultrasound Images. </b> [<a href="https://doi.org/10.1109/TCBB.2022.3224934" class=link>Link</a>]
+            <br>
+            Xiujian Liu, Tianyuan Feng, Weipeng Liu, Liang Song, Yixuan Yuan, William Kongto Hau, Javier Del Ser, <b>Zhifan Gao</b>. <br>
+            <i>IEEE/ACM Transactions on Computational Biology and Bioinformatics</i>
+	    </p></li>	
+		
+	    <li><p>	
 	    <b>Multi-Level Multi-Type Self-Generated Knowledge Fusion for Cardiac Ultrasound Segmentation. </b> [<a href="https://doi.org/10.1016/j.inffus.2022.11.004" class=link>Link</a>]
             <br>
             Chenjin Yu, Shuang Li, Dhanjoo Ghista, <b>Zhifan Gao</b>, Heye Zhang, Javier Del Ser, Lin Xu. <br>
@@ -73,13 +87,6 @@
             <br>
             Hongwei Zhang, <b>Zhifan Gao</b>, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
             <i>IEEE Transactions on Medical Imaging</i>
-	    </p></li>
-		
-            <li><p>	
-	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org/10.1109/JBHI.2022.3213595" class=link>Link</a>]
-            <br>
-            Weiwei Zhang, Zhen Zhou, <b>Zhifan Gao</b>, Guang Yang, Lei Xu, Weiwen Wu, Heye Zhang. <br>
-            <i>IEEE Journal of Biomedical and Health Informatics</i>
 	    </p></li>
 		
 	    <li><p>	
@@ -101,6 +108,13 @@
     <div>
         <h2><hr><a name="2023"></a>2023</h2>
         <ul>
+	    <li><p>	
+	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org/10.1109/JBHI.2022.3213595" class=link>Link</a>]
+            <br>
+            Weiwei Zhang, Zhen Zhou, <b>Zhifan Gao</b>, Guang Yang, Lei Xu, Weiwen Wu, Heye Zhang. <br>
+            <i>IEEE Journal of Biomedical and Health Informatics</i> 27(1): 409-420, 2023.
+	    </p></li>
+		
 	    <li><p>	
 	    <b>Personalized Coronary Blood Flow Model Based on CT Perfusion to Non-Invasively Calculate Fractional Flow Reserve. </b> [<a href="https://doi.org/10.1016/j.cma.2022.115789" class=link>Link</a>]
             <br>
