--- a/service.html
+++ b/service.html
@@ -57,6 +57,7 @@
             <li><p> IEEE Network Magzine <p></li>
             <li><p> IEEE Sensors Journal <p></li>
             <li><p> IEEE Signal Processing Letters <p></li>
+            <li><p> ACM Computing Surveys <p></li>
             <li><p> ACM Transactions on Multimedia Computing, Communications and Applications </p></li>
             <li><p> ACM Transactions on Intelligent Systems and Technology </p></li>
             <li><p> ACM Transactions on Internet Technology </p></li>
