--- a/publications.html
+++ b/publications.html
@@ -81,13 +81,6 @@
             Hongwei Zhang, <b>Zhifan Gao</b>, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
             <i>IEEE Transactions on Medical Imaging</i>
 	    </p></li>
-		
-	    <li><p>	
-	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
-            <br>
-            Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>. <br>
-            <i>IEEE Internet of Things Journal</i>
-	    </p></li>
 	
 	    <li><p>
 	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
@@ -106,6 +99,13 @@
             <br>
             Weiwei Zhang, Zhen Zhou, <b>Zhifan Gao</b>, Guang Yang, Lei Xu, Weiwen Wu, Heye Zhang. <br>
             <i>IEEE Journal of Biomedical and Health Informatics</i> 27(1): 409-420, 2023.
+	    </p></li>
+	
+            <li><p>	
+	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
+            <br>
+            Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>. <br>
+            <i>IEEE Internet of Things Journal</i> 10(2): 1536-1545, 2023.
 	    </p></li>
 		
 	    <li><p>	
