--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,7 @@
 	    </p></li>
 	
             <li><p>	
-	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
+	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b> [<a href="https://doi.org/10.1109/JIOT.2022.3209895" class=link>Link</a>]
             <br>
             Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>. <br>
             <i>IEEE Internet of Things Journal</i> 10(2): 1536-1545, 2023.
