--- a/service.html
+++ b/service.html
@@ -48,6 +48,7 @@
             <li><p> IEEE Transactions on Neural Networks and Learning Systems </p></li>
             <li><p> IEEE Transactions on Cybernetics </p></li>
             <li><p> IEEE Transactions on Cognitive and Developmental Systems </p></li>
+            <li><p> IEEE Transactions on Computational Social Systems </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE Transactions on Geoscience and Remote Sensing </p></li>
