--- a/publications.html
+++ b/publications.html
@@ -55,10 +55,24 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
 	    <li><p>	
+	    <b>Hierarchical Perception Adversarial Learning Framework for Compressed Sensing MRI Health. </b> [<a href="https://doi.org/10.1109/TMI.2023.3240862" class=link>Link</a>]
+            <br>
+            <b>Zhifan Gao</b>, Yifeng Guo, Jiajing Zhang, Tieyong Zeng, Guang Yang. <br>
+            <i>IEEE Transactions on Medical Imaging</i>
+	    </p></li>
+		
+	    <li><p>	
 	    <b>Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </b> [<a href="https://doi.org/10.1109/TCSVT.2022.3232112" class=link>Link</a>]
             <br>
             <b>Zhifan Gao</b>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. <br>
             <i>IEEE Transactions on Circuits and Systems for Video Technology</i>
+	    </p></li>
+		
+	    <li><p>	
+	    <b>A Physics-guided Deep Learning Approach For Functional Assessment of Cardiovascular Disease in IoT-based Smart Health. </b> [<a href="https://doi.org/10.1109/JIOT.2023.3240536" class=link>Link</a>]
+            <br>
+            Dong Zhang, Xiujian Liu, Jun Xia, <b>Zhifan Gao</b>, Heye Zhang, Victor Hugo C. de Albuquerque. <br>
+            <i>IEEE Internet of Things Journal</i>
 	    </p></li>
 		
 	    <li><p>	
