--- a/service.html
+++ b/service.html
@@ -63,6 +63,7 @@
             <li><p> ACM Transactions on Intelligent Systems and Technology </p></li>
             <li><p> ACM Transactions on Internet Technology </p></li>
             <li><p> Neural Networks </p></li>
+            <li><p> Medical Image Analysis </p></li>
             <li><p> Medical Physics </p></li>
             <li><p> Physics in Medicine and Biology </p></li>
             <li><p> Ultrasound in Medicine and Biology </p></li>
