--- a/publications.html
+++ b/publications.html
@@ -89,12 +89,6 @@
             <i>Information Fusion</i>
 	    </p></li>
 		
-	    <li><p>	
-	    <b>Progressive Perception Learning for Main Coronary Segmentation in X-ray Angiography. </b> [<a href="https://doi.org/10.1109/TMI.2022.3219126" class=link>Link</a>]
-            <br>
-            Hongwei Zhang, <b>Zhifan Gao</b>, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
-            <i>IEEE Transactions on Medical Imaging</i>
-	    </p></li>
 	
 	    <li><p>
 	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
@@ -108,6 +102,13 @@
     <div>
         <h2><hr><a name="2023"></a>2023</h2>
         <ul>
+            <li><p>	
+	    <b>Progressive Perception Learning for Main Coronary Segmentation in X-ray Angiography. </b> [<a href="https://doi.org/10.1109/TMI.2022.3219126" class=link>Link</a>]
+            <br>
+            Hongwei Zhang, <b>Zhifan Gao</b>, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
+            <i>IEEE Transactions on Medical Imaging</i> 42(3): 864-879, 2023.
+	    </p></li>
+		
 	    <li><p>	
 	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org/10.1109/JBHI.2022.3213595" class=link>Link</a>]
             <br>
