--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,13 @@
     <div>
         <h2><hr><a name="2023"></a>2023</h2>
         <ul>
+	    <li><p>	
+	    <b>Motion Estimation Based on Projective Information Disentanglement for 3D Reconstruction of Rotational Coronary Angiography. </b> [<a href="https://doi.org/10.1016/j.compbiomed.2023.106743" class=link>Link</a>]
+            <br>
+            Xiujian Liu, Si Li, Bin Wang, Lin Xu, Zhifan Gao, Guang Yang. <br>
+            <i>Computers in Biology and Medicine</i> 157(106743), 2023.
+	    </p></li>
+		
             <li><p>	
 	    <b>Progressive Perception Learning for Main Coronary Segmentation in X-ray Angiography. </b> [<a href="https://doi.org/10.1109/TMI.2022.3219126" class=link>Link</a>]
             <br>
