--- a/publications.html
+++ b/publications.html
@@ -88,14 +88,6 @@
             Chenjin Yu, Shuang Li, Dhanjoo Ghista, <b>Zhifan Gao</b>, Heye Zhang, Javier Del Ser, Lin Xu. <br>
             <i>Information Fusion</i>
 	    </p></li>
-		
-	
-	    <li><p>
-	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
-            <br> 
-            Jiahao Huang, Yingying Fang, Yinzhe Wu, Huanjun Wu, <b>Zhifan Gao</b>, Yang Li, Javier Del Ser, Jun Xia, Guang Yang. <br>
-            <i>Neurocomputing</i>
-	    </p></li>
         </ul>
     </div>
 	
@@ -149,6 +141,13 @@
             <br> 
             Yang Nan, Peng Tang, Guyue Zhang, Caihong Zeng, Zhihong Liu, <b>Zhifan Gao</b>, Heye Zhang, Guang Yang. <br>
             <i>IEEE Transactions on Medical Imaging</i> 41(12): 3799-3811, 2022
+	    </p></li>
+		
+	    <li><p>
+	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
+            <br> 
+            Jiahao Huang, Yingying Fang, Yinzhe Wu, Huanjun Wu, <b>Zhifan Gao</b>, Yang Li, Javier Del Ser, Jun Xia, Guang Yang. <br>
+            <i>Neurocomputing</i> 493:281-304, 2022.
 	    </p></li>
 		
             <li><p>
