--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
         <hr><a name="profact">
                 <p></a>Introduction to Artificial Intelligence, 2022 Spring </p>
                 <p></a>Medical Image Processing, 2021 Spring, 2022 Spring </p>
-                <p></a>Programming Language, 2020 Fall </p>
+                <p></a>Programming Language, 2020 Fall, 2022 Fall </p>
                 <p></a>Machine Learning, 2020 Fall, 2021 Fall </p>
     </div>
 </td>
