--- a/publications.html
+++ b/publications.html
@@ -53,9 +53,9 @@
     
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
-        <ul>
+        <ul>		
 	    <li><p>	
-	    <b>Hierarchical Perception Adversarial Learning Framework for Compressed Sensing MRI Health. </b> [<a href="https://doi.org/10.1109/TMI.2023.3240862" class=link>Link</a>]
+	    <b>Hierarchical Perception Adversarial Learning Framework for Compressed Sensing MRI. </b> [<a href="https://doi.org/10.1109/TMI.2023.3240862" class=link>Link</a>]
             <br>
             <b>Zhifan Gao</b>, Yifeng Guo, Jiajing Zhang, Tieyong Zeng, Guang Yang. <br>
             <i>IEEE Transactions on Medical Imaging</i>
@@ -94,6 +94,13 @@
     <div>
         <h2><hr><a name="2023"></a>2023</h2>
         <ul>
+            <li><p>	
+	    <b>Survival prediction of heart failure patients using motion-based analysis method. </b> [<a href="https://doi.org/10.1016/j.cmpb.2023.107547" class=link>Link</a>]
+            <br>
+            Saidi Guo, Heye Zhang, Yifeng Gao, Hui Wang, Lei Xu, <b>Zhifan Gao</b>, Antonella Guzzo, Giancarlo Fortino. <br>
+            <i>Computer Methods and Programs in Biomedicine</i> 236(107547), 2023.
+	    </p></li>
+		
 	    <li><p>	
 	    <b>Motion Estimation Based on Projective Information Disentanglement for 3D Reconstruction of Rotational Coronary Angiography. </b> [<a href="https://doi.org/10.1016/j.compbiomed.2023.106743" class=link>Link</a>]
             <br>
