--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
         <h2><hr><a name="2023"></a>2023</h2>
         <ul>
             <li><p>	
-	    <b>Survival prediction of heart failure patients using motion-based analysis method. </b> [<a href="https://doi.org/10.1016/j.cmpb.2023.107547" class=link>Link</a>]
+	    <b>Survival Prediction of Heart Failure Patients Using Motion-Based Analysis Method. </b> [<a href="https://doi.org/10.1016/j.cmpb.2023.107547" class=link>Link</a>]
             <br>
             Saidi Guo, Heye Zhang, Yifeng Gao, Hui Wang, Lei Xu, <b>Zhifan Gao</b>, Antonella Guzzo, Giancarlo Fortino. <br>
             <i>Computer Methods and Programs in Biomedicine</i> 236(107547), 2023.
