--- a/research.html
+++ b/research.html
@@ -19,6 +19,7 @@
     <div class="menu-item"><a href="research.html" class="current">Research</a></div>
     <div class="menu-item"><a href="member.html">Member</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html">Service</a></div>
 </td>
 <td id="layout-content">
