--- a/teaching.html
+++ b/teaching.html
@@ -17,7 +17,7 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
-    <div class="menu-item"><a href="group.html">Group</a></div>
+    <div class="menu-item"><a href="group.html">>Member</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
     <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
     <div class="menu-item"><a href="service.html">Service</a></div>
