--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
-    <div class="menu-item"><a href="group.html">Member</a></div>
+    <div class="menu-item"><a href="member.html">Member</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
     <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html" class="current">Service</a></div>
