--- a/member.html
+++ b/member.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="base.css" />
-    <link rel="stylesheet" type="text/css" href="group.css" />
+    <link rel="stylesheet" type="text/css" href="member.css" />
     <title>Zhifan Gao</title>
     <base href="https://zhifan-gao.github.io/group.html">
    <!--  <base href="./group.html">  -->
