--- a/publications.html
+++ b/publications.html
@@ -164,7 +164,7 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position">
-                    <img class="img_style" src="./publication_imgs/2023-IoT-cancer.png">
+                    <img class="img_style" src="./publication_imgs/2023-IoT-cancer.PNG">
                 </div>
             <div class="title"> Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </div>
             <div class="author"> Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <div class="my_name">Zhifan Gao</div>. </div>
