--- a/publications.html
+++ b/publications.html
@@ -165,6 +165,7 @@
             <div class="paper">
                 <div class="img_position">
                     <img class="img_style" src="./publication_imgs/2023-IoT-cancer.PNG">
+                    <img class="img_style" src="./publication_imgs/2023-IoT-cancer.png">
                 </div>
             <div class="title"> Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </div>
             <div class="author"> Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <div class="my_name">Zhifan Gao</div>. </div>
