--- a/publications.html
+++ b/publications.html
@@ -58,6 +58,15 @@
         
         <div>
             <h1 style="margin-top: 0em">In Press</h1>
+            
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-JBHI-IVUS.png"> </div>
+                <div class="title"> Vessel Contour Detection in Intracoronary Images via Bilateral Cross-Domain Adaptation. </div>
+                <div class="author"> Yihua Zhi, William Kongto Hau, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2023.3272342">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
