--- a/publications.html
+++ b/publications.html
@@ -509,7 +509,7 @@
                 <div class="title"> A Deep Learning Based Left Atrium Anatomy Segmentation and Scar Delineation in 3D Late Gadolinium Enhanced CMR Images. </div>
                 <div class="author"> Guang Yang, Jun Chen, <div class="my_name">Zhifan Gao</div>, Shuo Li, Hao Ni, Elsa Angelini, Tom Wong, Raad Mohiaddin, Eva Nyktari, Ricardo Wage, Lei Xu, Yanping Zhang, Xiuquan Du, Heye Zhang, David Firmin, Jennifer Keegan. </div>
                 <div class="source">  <div class="source_name"> International Society for Magnetic Resonance in Medicine Annual Meeting & Exhibition </div> (ISMRM), 2019. </div>
-                <div class="link"> <br>[<a href="https://cds.ismrm.org/protected/19MProceedings/PDFfiles/0788.html">paper</a>] </div>
+                <div class="link"> <br>[<a href="https://cds.ismrm.org/protected/19MProceedings/PDFfiles/0788.html">abstract</a>] </div>
             </div>
 
             <!-- 2018 -->
