--- a/publications.html
+++ b/publications.html
@@ -70,15 +70,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-IS.png"> </div>
-                <div class="title"> Causal Knowledge Fusion for 3D Cross-Modality Cardiac Image Segmentation. </div>
-                <div class="author"> Saidi Guo, Xiujian Liu, Heye Zhang, Qixin Lin, Lei Xu, Changzheng Shi, <div class="my_name">Zhifan Gao</div>, Antonella Guzzo, Giancarlo Fortino. </div>
-                <div class="source"> <div class="source_name"> Information Fusion </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.inffus.2023.101864">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
                 <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
                 <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
@@ -121,6 +112,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-IS.png"> </div>
+                <div class="title"> Causal Knowledge Fusion for 3D Cross-Modality Cardiac Image Segmentation. </div>
+                <div class="author"> Saidi Guo, Xiujian Liu, Heye Zhang, Qixin Lin, Lei Xu, Changzheng Shi, <div class="my_name">Zhifan Gao</div>, Antonella Guzzo, Giancarlo Fortino. </div>
+                <div class="source"> <div class="source_name"> Information Fusion </div> 99(101864), 2023.  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.inffus.2023.101864">paper</a>] </div>
+            </div>
             
             <hr class="hr_style">
             <div class="paper">
