--- a/publications.html
+++ b/publications.html
@@ -546,7 +546,7 @@
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2018-IEEE-JTEHM.png"> </div>
                 <div class="title"> A Meshfree Representation for Cardiac Medical Image Computing. </div>
                 <div class="author"> Heye Zhang, <div class="my_name">Zhifan Gao</div>, Lin Xu, Xingjian Yu, Ken C. L. Wong, Huafeng Liu, Ling Zhuang, and Pengcheng Shi. </div>
-                <div class="source">  <div class="source_name"> Medical Image Analysis </div> 50:82-94, 2018. </div>
+                <div class="source">  <div class="source_name"> IEEE Journal of Translational Engineering in Health and Medicine </div> 6:1800212, 2018. </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JTEHM.2018.2795022">paper</a>] </div>
             </div>
 
