--- a/publications.html
+++ b/publications.html
@@ -61,6 +61,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ESWA.png"> </div>
+                <div class="title"> Multi-View Stereoscopic Attention Network for 3D Tumor Classification in Automated Breast Ultrasound. </div>
+             
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2023.120969">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
                 <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
                 <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
