--- a/publications.html
+++ b/publications.html
@@ -61,15 +61,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ESWA.png"> </div>
-                <div class="title"> Multi-View Stereoscopic Attention Network for 3D Tumor Classification in Automated Breast Ultrasound. </div>
-             
-                <div class="source"> <div class="source_name"> Expert Systems with Applications </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2023.120969">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
                 <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
                 <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
@@ -112,6 +103,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ESWA.png"> </div>
+                <div class="title"> Multi-View Stereoscopic Attention Network for 3D Tumor Classification in Automated Breast Ultrasound. </div>
+                 <div class="author"> Wanli Ding, Heye Zhang, Shuxin Zhuang, Zhemin Zhuang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div>  234(120969), 2023.  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2023.120969">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
