--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,15 @@
         <div>
             <h1 style="margin-top: 0em">In Press</h1>
 
+             <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ASOC.png"> </div>
+                <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
+                <div class="author"> Jinhao Liu, Xinglai Zhu, Chenchu Xu, Lei Xu, <div class="my_name">Zhifan Gao</div>, Kemal Polat, Fayadh Alenezi. </div>
+                <div class="source"> <div class="source_name"> Applied Soft Computing </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.asoc.2023.110694">paper</a>] </div>
+            </div>
+
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
