--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,16 @@
         <div>
             <h1 style="margin-top: 0em">In Press</h1>
 
-             <hr class="hr_style">
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
+                <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
+                <div class="author"> Weipeng Liu, Haixing Zhu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
+            </div>
+            
+            <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ASOC.png"> </div>
                 <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
