--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
-                <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
+                <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules with Neural Networks and Information Bottleneck. </div>
                 <div class="author"> Weipeng Liu, Haixing Zhu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
