--- a/publications.html
+++ b/publications.html
@@ -196,6 +196,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-IoT-dong.png"> </div>
+                <div class="title"> Distance transform learning for structural and functional analysis of coronary artery from dual-view angiography. </div>
+                <div class="author"> Dong Zhang, Heye Zhang, Hongwei Zhang, Lei Xu, Jinglin Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Future Generation Computer Systems </div>  145:136-149, 2023. </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.future.2023.03.007">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position">
                     <img class="img_style" src="./publication_imgs/2023-JBHI-CT.png">
                 </div>
