--- a/publications.html
+++ b/publications.html
@@ -570,6 +570,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2018-MTAP.png"> </div>
+                <div class="title"> Robust recovery of myocardial kinematics using dual H<sub>&#8734</sub> criteria. </div>
+                <div class="author"> <div class="my_name">Zhifan Gao</div>, Heye Zhang, Defeng Wang, Min Guo, Huafeng Liu, Ling Zhuang, and Pengcheng Shi. </div>
+                <div class="source">  <div class="source_name"> Multimedia Tools and Applications </div> 77:23043–23071, 2018. </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1007/s11042-017-5395-1">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2018-MedIA.png"> </div>
                 <div class="title"> Direct Delineation of Myocardial Infarction without Contrast Agents Using a Joint Motion Feature Learning Architecture. </div>
                 <div class="author"> Chenchu Xu, Lei Xu, <div class="my_name">Zhifan Gao</div>, Shen Zhao, Heye Zhang, Yanping Zhang, Xiuquan Du, Shu Zhao, Dhanjoo Ghista, Huafeng Liu, and Shuo Li. </div>
@@ -584,15 +593,6 @@
                 <div class="author"> Heye Zhang, <div class="my_name">Zhifan Gao</div>, Lin Xu, Xingjian Yu, Ken C. L. Wong, Huafeng Liu, Ling Zhuang, and Pengcheng Shi. </div>
                 <div class="source">  <div class="source_name"> IEEE Journal of Translational Engineering in Health and Medicine </div> 6:1800212, 2018. </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JTEHM.2018.2795022">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2018-MTAP.png"> </div>
-                <div class="title"> Robust recovery of myocardial kinematics using dual H<sub>&#8734</sub> criteria. </div>
-                <div class="author"> <div class="my_name">Zhifan Gao</div>, Heye Zhang, Defeng Wang, Min Guo, Huafeng Liu, Ling Zhuang, and Pengcheng Shi. </div>
-                <div class="source">  <div class="source_name"> Multimedia Tools and Applications </div> 77:23043–23071, 2018. </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2016.11.003">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
