--- a/publications.html
+++ b/publications.html
@@ -61,9 +61,31 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/2023-MICCAI-PINN.png">
+                </div>
+            <div class="title"> Conditional Physics-Informed Graph Neural Network for Fractional Flow Reserve Assessment. </div>
+            <div class="author"> Baihong Xie, Xiujian Liu, Heye Zhang, Chenchu Xu, Tieyong Zeng, Yixuan Yuan, Guang Yang, <div class="my_name">Zhifan Gao</div>. </div>
+            <div class="source">  <div class="source_name"> 26nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2023. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-43990-2_11">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/2023-MICCAI-classification.png">
+                </div>
+            <div class="title"> A Geometry-Constrainted Deformable Attention Network for Aortic Segmentation. </div>
+            <div class="author"> Weiyuan Lin, Hui Liu, Lin Gu, <div class="my_name">Zhifan Gao</div>. </div>
+            <div class="source">  <div class="source_name"> 26nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2023. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-43987-2_8">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
-                <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules with Neural Networks and Information Bottleneck. </div>
-                <div class="author"> Weipeng Liu, Haixing Zhu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
+                <div class="title"> Gradient and Feature Conformity-Steered Medical Image Classification with Noisy Labels. </div>
+                <div class="author"> Xiaohan Xing, Zhen Chen, <div class="my_name">Zhifan Gao</div>, Yixuan Yuan. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
             </div>
