--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,15 @@
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
             </div>
             -->
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ASOC.png"> </div>
+                <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
+                <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
+            </div>
             
             <hr class="hr_style">
             <div class="paper">
