--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TIP.png"> </div>
+                <div class="title"> Iterative Residual Optimization Network for Limited-angle Tomographic Reconstruction. </div>
+                <div class="author"> Jiayi Pan, Hengyong Yu, <div class="my_name">Zhifan Gao</div>, Shaoyu Wang, Heye Zhang, Weiwen Wu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Image Processing </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TIP.2024.3351382">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI.png"> </div>
                 <div class="title"> A Deformable Constraint Transport Network for Optimal Aortic Segmentation from CT Images. </div>
                 <div class="author"> Weiyuan Lin, <div class="my_name">Zhifan Gao</div>, Hui Liu, Heye Zhang. </div>
