--- a/publications.html
+++ b/publications.html
@@ -70,14 +70,6 @@
             </div>
             -->
 
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TIP.png"> </div>
-                <div class="title"> Iterative Residual Optimization Network for Limited-angle Tomographic Reconstruction. </div>
-                <div class="author"> Jiayi Pan, Hengyong Yu, <div class="my_name">Zhifan Gao</div>, Shaoyu Wang, Heye Zhang, Weiwen Wu. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Image Processing </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TIP.2024.3351382">paper</a>] </div>
-            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -129,6 +121,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TIP.png"> </div>
+                <div class="title"> Iterative Residual Optimization Network for Limited-angle Tomographic Reconstruction. </div>
+                <div class="author"> Jiayi Pan, Hengyong Yu, <div class="my_name">Zhifan Gao</div>, Shaoyu Wang, Heye Zhang, Weiwen Wu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Image Processing </div> 33:910-925, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TIP.2024.3351382">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
