--- a/publications.html
+++ b/publications.html
@@ -133,6 +133,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TIP.png"> </div>
+                <div class="title"> Cellular Nucleus Image-Based Smarter Microscope System for Single Cell Analysis. </div>
+                <div class="author"> Wentao Wang, Lin Yang, Hang Sun, Xiaohong Peng, Junjie Yuan, Wenhao Zhong, Jinqi Chen, Xin He, Lingzhi Ye, Yi Zeng, <div class="my_name">Zhifan Gao</div>, Yunhui Li, Xiangmeng Qu. </div>
+                <div class="source"> <div class="source_name"> Biosensors and Bioelectronics </div> 250:116052, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.bios.2024.116052">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-IoT-FFR.png"> </div>
                 <div class="title"> A Physics-guided Deep Learning Approach For Functional Assessment of Cardiovascular Disease in IoT-based Smart Health. </div>
                 <div class="author"> Dong Zhang, Xiujian Liu, Jun Xia, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Victor Hugo C. de Albuquerque. </div>
