--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,14 @@
             </div>
             -->
 
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
+                <div class="title"> Embedding Tasks into the Latent Space: Cross-Space Consistency for Multi-Dimensional Analysis in Echocardiography. </div>
+                <div class="author"> Zhenxuan Zhang, Chengjin Yu, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3362964">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -147,6 +155,15 @@
                 <div class="author"> Dong Zhang, Xiujian Liu, Jun Xia, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Victor Hugo C. de Albuquerque. </div>
                 <div class="source"> <div class="source_name"> IEEE Internet of Things Journal </div> 10(21):18505-18516, 2023  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JIOT.2023.3240536">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-Radiology.png"> </div>
+                <div class="title"> Deep Learning–based Prediction of Percutaneous Recanalization in Chronic Total Occlusion Using Coronary CT Angiography. </div>
+                <div class="author"> Zhen Zhou, Yifeng Gao, Weiwei Zhang, Nan Zhang, Hui Wang, Rui Wang, <div class="my_name">Zhifan Gao</div>, Xiaomeng Huang, Shanshan Zhou, Xu Dai, Guang Yang, Heye Zhang, Koen Nieman, Lei Xu. </div>
+                <div class="source"> <div class="source_name"> Radiology </div> 309(2), 2023  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1148/radiol.231149">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
