--- a/publications.html
+++ b/publications.html
@@ -81,15 +81,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI.png"> </div>
-                <div class="title"> A Deformable Constraint Transport Network for Optimal Aortic Segmentation from CT Images. </div>
-                <div class="author"> Weiyuan Lin, <div class="my_name">Zhifan Gao</div>, Hui Liu, Heye Zhang. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2023.3339142">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
                 <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
                 <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
@@ -129,6 +120,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI.png"> </div>
+                <div class="title"> A Deformable Constraint Transport Network for Optimal Aortic Segmentation from CT Images. </div>
+                <div class="author"> Weiyuan Lin, <div class="my_name">Zhifan Gao</div>, Hui Liu, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 43(4):1462-1475, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2023.3339142">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
