--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-ECG.png"> </div>
+                <div class="title"> Frequency-Enhanced Geometric-Constrained Reconstruction for Localizing Myocardial Infarction in 12-Lead Electrocardiograms. </div>
+                <div class="author"> Shichang Lian, <div class="my_name">Zhifan Gao</div>, Hui Wang, Xiujian Liu, Lei Xu, Huafeng Liu, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3382050">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
                 <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
                 <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
