--- a/publications.html
+++ b/publications.html
@@ -132,6 +132,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CMIG.png"> </div>
+                <div class="title"> Distraction-aware Hierarchical Learning for Vascular Structure Segmentation in Intravascular Ultrasound Images. </div>
+                <div class="author"> Wenhao Zhong, Heye Zhang, <div class="my_name">Zhifan Gao</div>, William Kongto Hau, Guang Yang, Xiujian Liu, Lin Xu. </div>
+                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 115:102381, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2024.102381">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI.png"> </div>
                 <div class="title"> A Deformable Constraint Transport Network for Optimal Aortic Segmentation from CT Images. </div>
                 <div class="author"> Weiyuan Lin, <div class="my_name">Zhifan Gao</div>, Hui Liu, Heye Zhang. </div>
