--- a/publications.html
+++ b/publications.html
@@ -72,15 +72,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-PR.png"> </div>
-                <div class="title"> Collaborative Compensative Transformer Network for Salient Object Detection. </div>
-                <div class="author"> Jun Chen, Heye Zhang, Mingming Gong, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> Pattern Recognition </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.patcog.2024.110600">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
                 <div class="title"> Embedding Tasks into the Latent Space: Cross-Space Consistency for Multi-Dimensional Analysis in Echocardiography. </div>
                 <div class="author"> Zhenxuan Zhang, Chengjin Yu, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
@@ -138,6 +129,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-PR.png"> </div>
+                <div class="title"> Collaborative Compensative Transformer Network for Salient Object Detection. </div>
+                <div class="author"> Jun Chen, Heye Zhang, Mingming Gong, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Pattern Recognition </div> 154:110600, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.patcog.2024.110600">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
